Bug 482580 - On X11, clicking on bottom edge does not activate panel widgets
Summary: On X11, clicking on bottom edge does not activate panel widgets
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 6.0.1
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-06 20:44 UTC by daf
Modified: 2024-11-08 19:35 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description daf 2024-03-06 20:44:27 UTC
SUMMARY

When docking the panel to bottom of the screen, clicking on the bottom of the screen does not activate the action of the widget, it does however highlight the widget hover animation.


STEPS TO REPRODUCE
1. Have non floating panel in bottom of the screen
2. scroll mouse down until it's no longer visible
3. attempt to click a hovered widget in the panel

OBSERVED RESULT

Nothing happens

EXPECTED RESULT

Highlighted widget click action should be triggered

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.0.1
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.7.8-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 32 × AMD Ryzen 9 5950X 16-Core Processor
Memory: 62.7 GiB of RAM
Graphics Processor: AMD Radeon RX 7900 XTX
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: X570 AORUS ELITE
System Version: -CF

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2024-03-07 17:17:01 UTC
Possibly a recurrence of Bug 460896. Does it work on Wayland?
Comment 2 daf 2024-03-07 23:07:42 UTC
Indeed, on Wayland it works correctly.
Comment 3 Nate Graham 2024-03-08 19:12:30 UTC
When you say your panel is "non-floating" does this mean it's never floating, or it is floating, but it's current;y de-floated due to a window touching it?

If the latter, then this may be the same issue as Bug 482827.
Comment 4 daf 2024-03-08 20:47:38 UTC
(In reply to Nate Graham from comment #3)
> When you say your panel is "non-floating" does this mean it's never
> floating, or it is floating, but it's current;y de-floated due to a window
> touching it?
> 
> If the latter, then this may be the same issue as Bug 482827.

My panel does not have floating enabled, is in the bottom and set to auto hide.
The panel is getting the click as right click opens the generic panel menu but not the task manager menu.
So it's more like there's a bottom padding to the panel that's eating the clicks even though hover effect still works
Comment 5 Nate Graham 2024-03-08 23:10:06 UTC
How strange. What scale factor are you using?

Can you reproduce this on X11, Niccolò?
Comment 6 daf 2024-03-09 10:22:40 UTC
(In reply to Nate Graham from comment #5)
> How strange. What scale factor are you using?
> 
> Can you reproduce this on X11, Niccolò?

I use 200%, but did try scaling back to 100% for a quick test in X11 and made no difference
Comment 7 Niccolò Venerandi 2024-03-10 22:27:28 UTC
Mhh, I can't reproduce on X11 with non-floating auto-hide panel
Comment 8 daf 2024-03-11 20:03:48 UTC
(In reply to Niccolò Venerandi from comment #7)
> Mhh, I can't reproduce on X11 with non-floating auto-hide panel

Tried changing my plasma style to default and changing size from 58 to other values (small and big), make it floating and non floating, changing screen edge position and it was broken on all. Anything else I can test?
Comment 9 daf 2024-03-11 20:12:50 UTC
Added the panel to top and left edge, and work as expected (edge clicks active the widgets).

Only bottom and right edge have the issue.
Comment 10 Fushan Wen 2024-03-15 14:36:33 UTC
Can reproduce with height58, global scale 200%, floating panel.
Comment 11 Fushan Wen 2024-03-15 19:09:36 UTC
It turns out to be a Qt bug: https://codereview.qt-project.org/c/qt/qtdeclarative/+/548356
Comment 12 Bug Janitor Service 2024-03-16 05:00:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4077
Comment 13 Fushan Wen 2024-03-19 08:41:05 UTC
Git commit 59c02b41e9812a204f239b557e9de82d4e54b4dd by Fushan Wen.
Committed on 19/03/2024 at 08:28.
Pushed by fusionfuture into branch 'master'.

PanelView: fix rejecting click events near window edge with HiDPI

When using HiDPI and a click happens near the window edge, the global
position might have fractional parts, but after the global position is
converted to QPoint, the position can be rounded so it happens to stay
at the window edge, so the window geometry will not contain the rounded
position.

See also: https://codereview.qt-project.org/c/qt/qtdeclarative/+/548356
FIXED-IN: 6.0.3

M  +2    -1    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/59c02b41e9812a204f239b557e9de82d4e54b4dd
Comment 14 Fushan Wen 2024-03-19 09:09:11 UTC
Git commit 2288a0f1c576a0e096208caa195b5cbcb43c877b by Fushan Wen.
Committed on 19/03/2024 at 08:42.
Pushed by fusionfuture into branch 'Plasma/6.0'.

PanelView: fix rejecting click events near window edge with HiDPI

When using HiDPI and a click happens near the window edge, the global
position might have fractional parts, but after the global position is
converted to QPoint, the position can be rounded so it happens to stay
at the window edge, so the window geometry will not contain the rounded
position.

See also: https://codereview.qt-project.org/c/qt/qtdeclarative/+/548356
FIXED-IN: 6.0.3


(cherry picked from commit 59c02b41e9812a204f239b557e9de82d4e54b4dd)

M  +2    -1    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/2288a0f1c576a0e096208caa195b5cbcb43c877b