PanelView: fix rejecting click events near window edge with HiDPI

When using HiDPI and a click happens near the window edge, the global
position might have fractional parts, but after the global position is
converted to QPoint, the position can be rounded so it happens to stay
at the window edge, so the window geometry will not contain the rounded
position.

See also: https://codereview.qt-project.org/c/qt/qtdeclarative/+/548356

BUG: 482580
FIXED-IN: 6.0.3